fixtures/gate/accept/positive_through_container.oath
(data W [a] (Wrap a))
(data Rose [] (Node Int (W Rose)))
