fixtures/gate/reject/negative_through_container.oath
(data W [a] (Wrap a))
(data D [] (C (-> (W D) Int)))
